crates/ironmaint-testkit/tests/snapshots/snapshots__event_envelope.snap
---
source: crates/ironmaint-testkit/tests/snapshots.rs
assertion_line: 181
expression: "&parsed"
---
{
  "transitioned": {
    "transition": {
      "from": "event_detected",
      "to": "intake",
      "rule_index": 0
    },
    "projection_after": {
      "job": {
        "id": "01a0da10-8043-75fd-ae39-98c2bc5acd99",
        "package": {
          "distribution": {
            "family": "debian",
            "release": "sid"
          },
          "source_name": "rust-core"
        },
        "initiating_event": "01a0da10-8043-75fd-ae39-98c5dd3cf63a",
        "created_at": "2026-01-15T09:00:00Z"
      },
      "state": "intake",
      "version": 1,
      "updated_at": "2026-01-15T09:00:00Z"
    },
    "occurred_at": "2026-01-15T09:00:00Z",
    "schema_version": 1
  }
}
