crates/ironmaint-testkit/tests/snapshots/snapshots__evidence.snap
---
source: crates/ironmaint-testkit/tests/snapshots.rs
expression: "&parsed"
---
{
  "id": "01a0da10-8043-75fd-ae39-98c9ad84c4b9",
  "candidate": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
  "kind": "build",
  "status": "pass",
  "producer": {
    "name": "debian-stub",
    "version": "0.1.0"
  },
  "schema_version": 1,
  "artifacts": [
    {
      "id": "01a0da10-8043-75fd-ae39-98be87d0d2d4",
      "kind": "build_artifact",
      "digest": {
        "algorithm": "sha256",
        "value": "bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb"
      }
    }
  ],
  "scope": {
    "kind": "distribution",
    "value": {
      "family": "debian",
      "release": "sid"
    }
  },
  "observed_at": "2026-01-15T09:30:00Z",
  "notes": "First build attempt succeeded.",
  "truncated": false
}
