crates/ironmaint-testkit/tests/snapshots/snapshots__maintenance_job.fedora.snap
---
source: crates/ironmaint-testkit/tests/snapshots.rs
assertion_line: 181
expression: "&parsed"
---
{
  "id": "01a0da10-8043-75fd-ae39-98c11dc32c50",
  "package": {
    "distribution": {
      "family": "fedora",
      "release": "rawhide"
    },
    "source_name": "rust-core"
  },
  "initiating_event": "01a0da10-8043-75fd-ae39-98c3a5f49407",
  "created_at": "2026-01-15T09:00:00Z"
}
