crates/ironmaint-testkit/tests/snapshots/snapshots__publication_plan.snap
---
source: crates/ironmaint-testkit/tests/snapshots.rs
assertion_line: 181
expression: "&parsed"
---
{
  "release_candidate": "01a0da10-8043-75fd-ae39-98bf92523692",
  "distribution": {
    "family": "debian",
    "release": "sid"
  },
  "operations": [
    {
      "id": "01a0da10-8043-75fd-ae39-98c795f7767e",
      "kind": "canonical_repository_push",
      "candidate": "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
      "authorization": "proposed"
    }
  ],
  "schema_version": 1
}
